results/SpecGenBench/2-shot/log-ReLUSeq-2023_11_28_15_10_17.txt
public class ReLUSeq {
    //@ ensures \result >= 0;
    //@ ensures \result == x < 0 ? 0 : x;
    public static double computeReLU(double x) {
        return ((x >= 0) ? x : 0);
    }
}
/home/max/Documents/JMLGPT/tmp/ReLUSeq.java:3: error: incomparable types: double and boolean
    //@ ensures \result == x < 0 ? 0 : x;
                        ^
/home/max/Documents/JMLGPT/tmp/ReLUSeq.java:3: error: incompatible types: double cannot be converted to boolean
    //@ ensures \result == x < 0 ? 0 : x;
                                 ^
2 errors

